--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm a web developer with a passion for creating responsive websites and web applications. Here is a showcase of some of my work.</p>
+        <p>Hello! I'm a electrical engineer with a passion for creating responsive websites and web applications. Here is a showcase of some of my work.</p>
     </section>
 
     <section id="projects">
